<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/img_background"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/len_cold"
        android:layout_width="270dp"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:background="#04ea00"
        android:textColor="#ffffff"
        android:text="@string/length_and_cold_allowance"/>

    <Button
        android:id="@+id/na_nw"
        android:layout_width="270dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="#04ea00"
        android:text="@string/night_act_and_night_weightage_allowance"
        android:textColor="#ffffff" />
    <Button
        android:id="@+id/nn_a"
        android:layout_width="270dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="#04ea00"
        android:textColor="#ffffff"
        android:text="@string/night_navigation_allowance"/>
    <Button
        android:id="@+id/honor_form"
        android:layout_width="270dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="#04ea00"
        android:textColor="#ffffff"
        android:text="@string/honorarium_form"/>

</LinearLayout>