<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:background="@drawable/img_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:text="HALDIA DOCK COMPLEX"
        android:textStyle="bold" />
    <EditText
    android:id="@+id/edittext_username"
        android:layout_width="206dp"
    android:layout_height="40dp"
        android:layout_marginTop="150dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/username"
    android:hint="@string/username" />
    <EditText
        android:id="@+id/edittext_password"
        android:inputType="textPassword"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:background="#ffffff"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password" />
    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#0ABF8C"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/not_registered"/>
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#FA0000"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/register"
            />


    </LinearLayout>

</LinearLayout>